# TrackOverlay

./: Cargo.toml  Dockerfile  README.md  default_config.json
.github/workflows/: ci.yml
src/: export.rs  gpmf_extract.rs  lib.rs  main.rs  overlay.rs  project.rs  sync.rs  telemetry.rs  trackmap.rs  video.rs
telemetry-overlay/: Cargo.toml
telemetry-overlay/src/: export.rs  lib.rs  main.rs  video.rs
telemetry-overlay/tests/: telemetry_tests.rs  video_tests.rs
tests/: project_tests.rs  sync_tests.rs  telemetry_tests.rs  trackmap_tests.rs  video_tests.rs
track-overlay/: Cargo.toml  README.md
track-overlay/src/: main.rs  project.rs  telemetry.rs
