[package]
name = "track-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive", "env"] }
crossbeam-channel = "0.5.16"
csv = "1.4.0"
eframe = "0.34.3"
egui = "0.34.3"
egui-file-dialog = "0.13.0"
env_logger = "0.11.11"
ffmpeg-next = "8.1.0"
log = "0.4.33"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
vello = "0.9.0"
wgpu = "30.0.0"

[dev-dependencies]
tempfile = "3.27.0"
