[package]
name = "telemetry-overlay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.2", features = ["derive"] }
csv = "1.4.0"
eframe = "0.35.0"
egui = "0.35.0"
gstreamer = "0.25.3"
gstreamer-app = "0.25.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
vello = "0.9.0"
wgpu = "30.0.0"

[dev-dependencies]
tempfile = "3.27.0"
